# nlp-reco

./: .gitattributes  .gitignore  README.md  hotel_recommendations.csv  main.py  pyproject.toml  requirements.txt
data/: final_dataset.csv  hotel_desc.csv  hotel_desc_lemmatized.csv  hotel_desc_lemmatized_new.csv  hotel_desc_merged_topics_1191.csv  hotel_desc_with_words_embeddings.csv  hotel_info.csv  session_data.csv
notebooks/: demo.ipynb  eda-and-experiments.ipynb  trial.ipynb
scripts/: generate_mock_data.py
src/: config.py  data_preprocessing.py  recommendation.py  topic_modeling.py  validation.py
utils/: text_processing.py
